started focal analysis

--- a/geospatial_raster_data.ipynb
+++ b/geospatial_raster_data.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "0cf4e542",
    "metadata": {},
    "source": [
     "![datiaperti logo](images/datiaperti_small.png)"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e9de7a41",
    "metadata": {},
    "source": [
     "# Geospatial Data Analysis - Raster Data\n",
@@ -17,6 +19,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "420f180f",
    "metadata": {},
    "source": [
     "The upper-left corner of an image represents the origin (0, 0). The x axis goes from the origin to the left while the y axis goes from the origin to the bottom of the image. We use the [GDAL Python binding](https://gdal.org/tutorials/raster_api_tut.html)  to read and write GeoTIFF files that contain the raster data and metadata. We use the [PIL](https://pillow.readthedocs.io/en/stable/index.html) Python package to render the images and Matplotlib to visualize them in the notebook."
@@ -25,6 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "408855da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +44,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "22ef40d9",
    "metadata": {},
    "source": [
     "We want to stack three raster images, acquired by a Landsat satellite, into a GeoTIFF file so that they can be used as RGB bands. Let's have a look at one of them"
@@ -48,6 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "f4dbe73a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
+   "id": "2d72666f",
    "metadata": {},
    "outputs": [
     {
@@ -102,6 +109,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c41807de",
    "metadata": {},
    "source": [
     "The image files are provided in GeoTIFF format with one single band so we extract information from their metadata such as the image size for each dimension, the spatial reference system and the coordinates of the origin."
@@ -110,6 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "7e30ace3",
    "metadata": {},
    "outputs": [
     {
@@ -135,6 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
+   "id": "163590f5",
    "metadata": {},
    "outputs": [
     {
@@ -152,6 +162,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c154c9e3",
    "metadata": {},
    "source": [
     "We create a new GeoTIFF file with three bands of the same size and spatial reference system as the images"
@@ -160,6 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "e53ecdb1",
    "metadata": {},
    "outputs": [
     {
@@ -182,6 +194,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "adfac63f",
    "metadata": {},
    "source": [
     "We copy the raster data of the 1st image into the 3rd band of the created GeoTIFF file"
@@ -190,6 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "1d04b7fc",
    "metadata": {},
    "outputs": [
     {
@@ -211,6 +225,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c4fa8ef1",
    "metadata": {},
    "source": [
     "We open the 2nd image and we put the raster data into the 2nd band"
@@ -219,6 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "f9d2b2e6",
    "metadata": {},
    "outputs": [
     {
@@ -240,6 +256,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2e58d388",
    "metadata": {},
    "source": [
     "Finally we put the 3rd image into the 1st band"
@@ -248,6 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "964a1342",
    "metadata": {},
    "outputs": [
     {
@@ -269,6 +287,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dace1d0e",
    "metadata": {},
    "source": [
     "we write the data on disk. If the file is a new one we have to close the data source as well."
@@ -277,6 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "494e99b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,6 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
+   "id": "9c82c284",
    "metadata": {},
    "outputs": [
     {
@@ -318,6 +339,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2ef148d4",
    "metadata": {},
    "source": [
     "we compute some statistical values for each band: mean, min, max and standard deviation. We create also some overview layers for each band to be visualized at different zoom levels."
@@ -326,6 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "d6644df5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,6 +360,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8ff403a4",
    "metadata": {},
    "source": [
     "### Raster data subsetting\n",
@@ -345,6 +369,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a7e8536c",
    "metadata": {},
    "source": [
     "Let's say we are interested only in the area covered by the snow in the Landsat band1 imagery we have used in the previous section. In order to select an area inside the original image we have to apply an affine transformation that copies the pixels in the original image to the new one keeping the same metrics (i.e. distance). The affine transformation we are going to define is more precisely a translation, that is we will not apply any rotation."
@@ -353,6 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "77742a6a",
    "metadata": {},
    "outputs": [
     {
@@ -372,6 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "2c5e8b41",
    "metadata": {},
    "outputs": [
     {
@@ -393,6 +420,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d76a8c68",
    "metadata": {},
    "source": [
     "We want to move the offset of the subset image 90 km to the east and 60 km to the south. We need to compute the transformation that will be used to create the subset image. The spatial resolution for both x and y dimension will stay the same."
@@ -401,6 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "7e6be86e",
    "metadata": {},
    "outputs": [
     {
@@ -425,6 +454,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "01e639b9",
    "metadata": {},
    "source": [
     "Then we want the length of the subset image to be 20 km to the east and 30 km to the south"
@@ -433,6 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "e45c756f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,6 +473,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ff2cebca",
    "metadata": {},
    "source": [
     "We need to compute the number of pixels that corresponds to the size of the image for each direction"
@@ -450,6 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "618475a8",
    "metadata": {},
    "outputs": [
     {
@@ -471,6 +504,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "061032bf",
    "metadata": {},
    "source": [
     "We also need to compute the pixel indexes that corresponds to the new offset "
@@ -479,6 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "6a7c7bc1",
    "metadata": {},
    "outputs": [
     {
@@ -500,6 +535,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9766bff0",
    "metadata": {},
    "source": [
     "We create a new GeoTiff file for the image subset, with one band and the size we want. We also set the offset of the subset image in the file metadata. We will use the same spatial reference system and the same spatial resolution in both x and y direction."
@@ -508,6 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "d2b9b540",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,6 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "c273d031",
    "metadata": {},
    "outputs": [
     {
@@ -547,6 +585,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4036ca0e",
    "metadata": {},
    "source": [
     "Now we can plot the subset image"
@@ -555,6 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
+   "id": "e1a946d6",
    "metadata": {},
    "outputs": [
     {
@@ -587,6 +627,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0a02f6b5",
    "metadata": {},
    "source": [
     "### Georeferencing\n",
@@ -596,6 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "cbae53f5",
    "metadata": {},
    "outputs": [
     {
@@ -620,6 +662,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "661a7823",
    "metadata": {},
    "source": [
     "We need at least three ground control points: we will use four, with their coordinates referenced to WGS84. For each point we need its x, y, and z coordinates and the row and column of the pixel in the image that refers to the ground point. The GDAL library uses the GCPs to compute the coefficients of the affine transformation that will map a pixel to a point in the spatial reference system.\n",
@@ -633,6 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "18848664",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,6 +691,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "988b5c81",
    "metadata": {},
    "source": [
     "The image copy has now a reference system and can be overlaid onto a map."
@@ -654,6 +699,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d0b3a497",
    "metadata": {},
    "source": [
     "### Mosaicking\n",
@@ -663,6 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
+   "id": "f6ed286e",
    "metadata": {},
    "outputs": [
     {
@@ -708,6 +755,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4b98aa81",
    "metadata": {},
    "source": [
     "This function computes the min and max x (eastings) and y (northing) coordinates of an image. The units are in meters."
@@ -716,6 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
+   "id": "c2acc9d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,6 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
+   "id": "308b9e1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,6 +790,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eeca4be2",
    "metadata": {},
    "source": [
     "We compute the min and max of the mosaic image coordinates"
@@ -748,6 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
+   "id": "e851e272",
    "metadata": {},
    "outputs": [
     {
@@ -779,6 +831,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c5888878",
    "metadata": {},
    "source": [
     "We compute the number of pixels of the mosaic in the the x and y dimensions "
@@ -787,6 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
+   "id": "f915901b",
    "metadata": {},
    "outputs": [
     {
@@ -807,6 +861,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "53ef1a0c",
    "metadata": {},
    "source": [
     "We create a raster GeoTIFF file for the mosaic image "
@@ -815,6 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
+   "id": "94bb8ba6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,6 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
+   "id": "32761ffe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,6 +891,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5db680b3",
    "metadata": {},
    "source": [
     "We set the offset of the mosaic image, that is the spatial coordinates of the upper-left corner pixel "
@@ -842,6 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
+   "id": "6b31456f",
    "metadata": {},
    "outputs": [
     {
@@ -862,6 +921,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1ad02cd4",
    "metadata": {},
    "source": [
     "Now we loop through all the images to copy the pixels in the mosaic image. Since the spatial reference is the same and the GeoTIFF files contain all the information required we can use a GDAL function to do the job."
@@ -870,6 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
+   "id": "9fe81fa5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,6 +947,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9f329cc3",
    "metadata": {},
    "source": [
     "We can now plot the mosaic"
@@ -894,6 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
+   "id": "be97bf3d",
    "metadata": {},
    "outputs": [
     {
@@ -927,6 +990,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "06300cc7",
    "metadata": {},
    "source": [
     "### Color Tables\n",
@@ -936,6 +1000,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
+   "id": "e444723d",
    "metadata": {},
    "outputs": [
     {
@@ -956,6 +1021,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dffb876c",
    "metadata": {},
    "source": [
     "We plot the elevation model using the Python PIL package that will assign automatically a color to each value between 1 and 5 on a gray scale and black to pixels with no data. "
@@ -964,6 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
+   "id": "64e7aa47",
    "metadata": {},
    "outputs": [
     {
@@ -996,6 +1063,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "354c0e10",
    "metadata": {},
    "source": [
     "We want to assign colors that have a meaning for us. We make a copy of the file so that the original one will not be changed."
@@ -1004,6 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
+   "id": "d0c5676f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,6 +1084,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c43774b4",
    "metadata": {},
    "source": [
     "We create an RGB color table. One RGB color for each value, from 1 to 5, of the pixels."
@@ -1023,6 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
+   "id": "0973d92c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1036,6 +1107,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9c68f89f",
    "metadata": {},
    "source": [
     "We set the color table of the dataset"
@@ -1044,6 +1116,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
+   "id": "e775db73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,6 +1128,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "89221bd9",
    "metadata": {},
    "source": [
     "We can now plot the map with colors that represent the height at each location: green for flat land and brown for mountain areas."
@@ -1063,6 +1137,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
+   "id": "3d64cd90",
    "metadata": {},
    "outputs": [
     {
@@ -1095,6 +1170,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6b820e5a",
    "metadata": {},
    "source": [
     "### Histograms\n",
@@ -1104,6 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
+   "id": "9ac18236",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,6 +1190,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "496e6122",
    "metadata": {},
    "source": [
     "We set the parameters for GetHistogram() including the parameter to get an exact histogram (approx_ok=False) and to not include values out of range (include_out_of_range=False). The pixel values of the raster containing the Swiss elevation model range between 1 and 5 and we have to include the no data value that is assigned the integer value 0. So we need 7 buckets. Five buckets for each of the integer value used to represent the height, and two more buckets to represent the pixel values below or above our interval. In our example these two buckets will be empty."
@@ -1121,6 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
+   "id": "68edc053",
    "metadata": {},
    "outputs": [
     {
@@ -1141,6 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
+   "id": "2f854e17",
    "metadata": {},
    "outputs": [
     {
@@ -1178,6 +1258,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e2b13cf9",
    "metadata": {},
    "source": [
     "### Map Algebra\n",
@@ -1187,6 +1268,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "a679fc40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,6 +1295,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4828ed9b",
    "metadata": {},
    "source": [
     "One example operation is the computation of the Normalized Difference Vegetation Index (NDVI) from two raster images, one containing the near-infrared (NIR) reflactance values and another containing the visible red band.\n",
@@ -1223,6 +1306,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "3e78e71c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,6 +1316,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ca6b31d8",
    "metadata": {},
    "source": [
     "We use a GeoTIFF file that contains the near-infrared and the red bands."
@@ -1240,6 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "4254642f",
    "metadata": {},
    "outputs": [
     {
@@ -1273,6 +1359,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "817cc1fd",
    "metadata": {},
    "source": [
     "We compute the NDVI index for each pixel and then we store the result in a new GeoTIFF file"
@@ -1281,6 +1368,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "3708f214",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,6 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "9c753aff",
    "metadata": {},
    "outputs": [
     {
@@ -1329,8 +1418,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6670f801",
+   "metadata": {},
+   "source": [
+    "### Focal Analysis\n",
+    "We might be interested in finding patterns in the raster data or we may want to fill missing values or smooth the data. One typical case is to remove speckle in radar images. In order to accomplish any of these tasks we have to define a pixel's neighborhood and compute a function or statistics over it repeating the same operation by moving to the next pixel. The result will be a new raster data. One simple neighborhood is a square centered in a pixel, e.g. a 3x3 square. The statistics can be the mean value, the maximum value or many other. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "id": "53bac7f9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1338,7 +1437,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1352,7 +1451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
