topological relationships and spatial joins

--- a/spatial_relationships.ipynb
+++ b/spatial_relationships.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 65,
    "id": "6483db48",
    "metadata": {},
    "outputs": [],
@@ -37,8 +37,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "999a9ecf",
+   "metadata": {},
+   "source": [
+    "We have to assign a Coordinate Reference System (CRS) to the points"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 67,
    "id": "cf93b31c",
    "metadata": {},
    "outputs": [],
@@ -47,8 +55,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dadb60ba",
+   "metadata": {},
+   "source": [
+    "The CRS used by the polygons is EPSG:2263"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 68,
    "id": "fa482a86",
    "metadata": {},
    "outputs": [
@@ -71,7 +87,7 @@
        "- Prime Meridian: Greenwich"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,8 +97,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5101d984",
+   "metadata": {},
+   "source": [
+    "We assign the same CRS to the points \n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 69,
    "id": "c8aff110",
    "metadata": {},
    "outputs": [],
@@ -92,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 70,
    "id": "53041150",
    "metadata": {},
    "outputs": [
@@ -124,7 +148,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_c0cc0bd57e7f16827a3cda047341c775 {\n",
+       "                #map_2633406ae7d91b8db9939012246a1450 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -152,13 +176,13 @@
        "&lt;/head&gt;\n",
        "&lt;body&gt;    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_c0cc0bd57e7f16827a3cda047341c775&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_2633406ae7d91b8db9939012246a1450&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;    \n",
        "    \n",
-       "            var map_c0cc0bd57e7f16827a3cda047341c775 = L.map(\n",
-       "                &quot;map_c0cc0bd57e7f16827a3cda047341c775&quot;,\n",
+       "            var map_2633406ae7d91b8db9939012246a1450 = L.map(\n",
+       "                &quot;map_2633406ae7d91b8db9939012246a1450&quot;,\n",
        "                {\n",
        "                    center: [40.70563028796376, -73.97739530297454],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -167,77 +191,77 @@
        "                    preferCanvas: false,\n",
        "                }\n",
        "            );\n",
-       "            L.control.scale().addTo(map_c0cc0bd57e7f16827a3cda047341c775);\n",
+       "            L.control.scale().addTo(map_2633406ae7d91b8db9939012246a1450);\n",
        "\n",
        "            \n",
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_6a5e6f03c879c56689312efb3d02f41d = L.tileLayer(\n",
+       "            var tile_layer_6c6966df685eeaf329120c77cdbd1542 = L.tileLayer(\n",
        "                &quot;https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Data by \\u0026copy; \\u003ca href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_c0cc0bd57e7f16827a3cda047341c775);\n",
+       "            ).addTo(map_2633406ae7d91b8db9939012246a1450);\n",
        "        \n",
        "    \n",
-       "            map_c0cc0bd57e7f16827a3cda047341c775.fitBounds(\n",
+       "            map_2633406ae7d91b8db9939012246a1450.fitBounds(\n",
        "                [[40.49609424323831, -74.25554815796838], [40.91516633268921, -73.6992424479807]],\n",
        "                {}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "        function geo_json_b49a9e94a6886574458ba66067620923_styler(feature) {\n",
+       "        function geo_json_5a3a56bf19e6c8414025416c8463870b_styler(feature) {\n",
        "            switch(feature.id) {\n",
        "                default:\n",
        "                    return {&quot;fillOpacity&quot;: 0.5, &quot;weight&quot;: 2};\n",
        "            }\n",
        "        }\n",
-       "        function geo_json_b49a9e94a6886574458ba66067620923_highlighter(feature) {\n",
+       "        function geo_json_5a3a56bf19e6c8414025416c8463870b_highlighter(feature) {\n",
        "            switch(feature.id) {\n",
        "                default:\n",
        "                    return {&quot;fillOpacity&quot;: 0.75};\n",
        "            }\n",
        "        }\n",
-       "        function geo_json_b49a9e94a6886574458ba66067620923_pointToLayer(feature, latlng) {\n",
+       "        function geo_json_5a3a56bf19e6c8414025416c8463870b_pointToLayer(feature, latlng) {\n",
        "            var opts = {&quot;bubblingMouseEvents&quot;: true, &quot;color&quot;: &quot;#3388ff&quot;, &quot;dashArray&quot;: null, &quot;dashOffset&quot;: null, &quot;fill&quot;: true, &quot;fillColor&quot;: &quot;#3388ff&quot;, &quot;fillOpacity&quot;: 0.2, &quot;fillRule&quot;: &quot;evenodd&quot;, &quot;lineCap&quot;: &quot;round&quot;, &quot;lineJoin&quot;: &quot;round&quot;, &quot;opacity&quot;: 1.0, &quot;radius&quot;: 2, &quot;stroke&quot;: true, &quot;weight&quot;: 3};\n",
        "            \n",
-       "            let style = geo_json_b49a9e94a6886574458ba66067620923_styler(feature)\n",
+       "            let style = geo_json_5a3a56bf19e6c8414025416c8463870b_styler(feature)\n",
        "            Object.assign(opts, style)\n",
        "            \n",
        "            return new L.CircleMarker(latlng, opts)\n",
        "        }\n",
        "\n",
-       "        function geo_json_b49a9e94a6886574458ba66067620923_onEachFeature(feature, layer) {\n",
+       "        function geo_json_5a3a56bf19e6c8414025416c8463870b_onEachFeature(feature, layer) {\n",
        "            layer.on({\n",
        "                mouseout: function(e) {\n",
        "                    if(typeof e.target.setStyle === &quot;function&quot;){\n",
-       "                        geo_json_b49a9e94a6886574458ba66067620923.resetStyle(e.target);\n",
+       "                        geo_json_5a3a56bf19e6c8414025416c8463870b.resetStyle(e.target);\n",
        "                    }\n",
        "                },\n",
        "                mouseover: function(e) {\n",
        "                    if(typeof e.target.setStyle === &quot;function&quot;){\n",
-       "                        const highlightStyle = geo_json_b49a9e94a6886574458ba66067620923_highlighter(e.target.feature)\n",
+       "                        const highlightStyle = geo_json_5a3a56bf19e6c8414025416c8463870b_highlighter(e.target.feature)\n",
        "                        e.target.setStyle(highlightStyle);\n",
        "                    }\n",
        "                },\n",
        "            });\n",
        "        };\n",
-       "        var geo_json_b49a9e94a6886574458ba66067620923 = L.geoJson(null, {\n",
-       "                onEachFeature: geo_json_b49a9e94a6886574458ba66067620923_onEachFeature,\n",
+       "        var geo_json_5a3a56bf19e6c8414025416c8463870b = L.geoJson(null, {\n",
+       "                onEachFeature: geo_json_5a3a56bf19e6c8414025416c8463870b_onEachFeature,\n",
        "            \n",
-       "                style: geo_json_b49a9e94a6886574458ba66067620923_styler,\n",
-       "                pointToLayer: geo_json_b49a9e94a6886574458ba66067620923_pointToLayer\n",
+       "                style: geo_json_5a3a56bf19e6c8414025416c8463870b_styler,\n",
+       "                pointToLayer: geo_json_5a3a56bf19e6c8414025416c8463870b_pointToLayer\n",
        "        });\n",
        "\n",
-       "        function geo_json_b49a9e94a6886574458ba66067620923_add (data) {\n",
-       "            geo_json_b49a9e94a6886574458ba66067620923\n",
+       "        function geo_json_5a3a56bf19e6c8414025416c8463870b_add (data) {\n",
+       "            geo_json_5a3a56bf19e6c8414025416c8463870b\n",
        "                .addData(data)\n",
-       "                .addTo(map_c0cc0bd57e7f16827a3cda047341c775);\n",
+       "                .addTo(map_2633406ae7d91b8db9939012246a1450);\n",
        "        }\n",
-       "            geo_json_b49a9e94a6886574458ba66067620923_add({&quot;bbox&quot;: [-74.25554815796838, 40.49609424323831, -73.6992424479807, 40.91516633268921], &quot;features&quot;: [{&quot;bbox&quot;: [-74.25554815796838, 40.49609424323831, -74.25554815796838, 40.49609424323831], &quot;geometry&quot;: {&quot;coordinates&quot;: [-74.25554815796838, 40.49609424323831], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;0&quot;, &quot;properties&quot;: {&quot;value1&quot;: 1033296, &quot;value2&quot;: 793054}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [-74.18639161974446, 40.548626183551285, -74.18639161974446, 40.548626183551285], &quot;geometry&quot;: {&quot;coordinates&quot;: [-74.18639161974446, 40.548626183551285], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;1&quot;, &quot;properties&quot;: {&quot;value1&quot;: 1071661, &quot;value2&quot;: 793239}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [-74.11712633514917, 40.60111607282338, -74.11712633514917, 40.60111607282338], &quot;geometry&quot;: {&quot;coordinates&quot;: [-74.11712633514917, 40.60111607282338], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;2&quot;, &quot;properties&quot;: {&quot;value1&quot;: 1110026, &quot;value2&quot;: 793424}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [-74.04775219145633, 40.653563761232235, -74.04775219145633, 40.653563761232235], &quot;geometry&quot;: {&quot;coordinates&quot;: [-74.04775219145633, 40.653563761232235], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;3&quot;, &quot;properties&quot;: {&quot;value1&quot;: 1148391, &quot;value2&quot;: 793609}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [-73.97826904965274, 40.705969129972395, -73.97826904965274, 40.705969129972395], &quot;geometry&quot;: {&quot;coordinates&quot;: [-73.97826904965274, 40.705969129972395], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;4&quot;, &quot;properties&quot;: {&quot;value1&quot;: 1186756, &quot;value2&quot;: 793794}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [-73.90867676336931, 40.75833220237152, -73.90867676336931, 40.75833220237152], &quot;geometry&quot;: {&quot;coordinates&quot;: [-73.90867676336931, 40.75833220237152], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;5&quot;, &quot;properties&quot;: {&quot;value1&quot;: 1225121, &quot;value2&quot;: 793979}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [-73.8389750826539, 40.81065291431889, -73.8389750826539, 40.81065291431889], &quot;geometry&quot;: {&quot;coordinates&quot;: [-73.8389750826539, 40.81065291431889], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;6&quot;, &quot;properties&quot;: {&quot;value1&quot;: 1263486, &quot;value2&quot;: 794164}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [-73.76916374290133, 40.86293094783606, -73.76916374290133, 40.86293094783606], &quot;geometry&quot;: {&quot;coordinates&quot;: [-73.76916374290133, 40.86293094783606], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;7&quot;, &quot;properties&quot;: {&quot;value1&quot;: 1301851, &quot;value2&quot;: 794349}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [-73.6992424479807, 40.91516633268921, -73.6992424479807, 40.91516633268921], &quot;geometry&quot;: {&quot;coordinates&quot;: [-73.6992424479807, 40.91516633268921], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;8&quot;, &quot;properties&quot;: {&quot;value1&quot;: 1340216, &quot;value2&quot;: 794534}, &quot;type&quot;: &quot;Feature&quot;}], &quot;type&quot;: &quot;FeatureCollection&quot;});\n",
+       "            geo_json_5a3a56bf19e6c8414025416c8463870b_add({&quot;bbox&quot;: [-74.25554815796838, 40.49609424323831, -73.6992424479807, 40.91516633268921], &quot;features&quot;: [{&quot;bbox&quot;: [-74.25554815796838, 40.49609424323831, -74.25554815796838, 40.49609424323831], &quot;geometry&quot;: {&quot;coordinates&quot;: [-74.25554815796838, 40.49609424323831], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;0&quot;, &quot;properties&quot;: {&quot;value1&quot;: 1033296, &quot;value2&quot;: 793054}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [-74.18639161974446, 40.548626183551285, -74.18639161974446, 40.548626183551285], &quot;geometry&quot;: {&quot;coordinates&quot;: [-74.18639161974446, 40.548626183551285], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;1&quot;, &quot;properties&quot;: {&quot;value1&quot;: 1071661, &quot;value2&quot;: 793239}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [-74.11712633514917, 40.60111607282338, -74.11712633514917, 40.60111607282338], &quot;geometry&quot;: {&quot;coordinates&quot;: [-74.11712633514917, 40.60111607282338], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;2&quot;, &quot;properties&quot;: {&quot;value1&quot;: 1110026, &quot;value2&quot;: 793424}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [-74.04775219145633, 40.653563761232235, -74.04775219145633, 40.653563761232235], &quot;geometry&quot;: {&quot;coordinates&quot;: [-74.04775219145633, 40.653563761232235], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;3&quot;, &quot;properties&quot;: {&quot;value1&quot;: 1148391, &quot;value2&quot;: 793609}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [-73.97826904965274, 40.705969129972395, -73.97826904965274, 40.705969129972395], &quot;geometry&quot;: {&quot;coordinates&quot;: [-73.97826904965274, 40.705969129972395], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;4&quot;, &quot;properties&quot;: {&quot;value1&quot;: 1186756, &quot;value2&quot;: 793794}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [-73.90867676336931, 40.75833220237152, -73.90867676336931, 40.75833220237152], &quot;geometry&quot;: {&quot;coordinates&quot;: [-73.90867676336931, 40.75833220237152], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;5&quot;, &quot;properties&quot;: {&quot;value1&quot;: 1225121, &quot;value2&quot;: 793979}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [-73.8389750826539, 40.81065291431889, -73.8389750826539, 40.81065291431889], &quot;geometry&quot;: {&quot;coordinates&quot;: [-73.8389750826539, 40.81065291431889], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;6&quot;, &quot;properties&quot;: {&quot;value1&quot;: 1263486, &quot;value2&quot;: 794164}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [-73.76916374290133, 40.86293094783606, -73.76916374290133, 40.86293094783606], &quot;geometry&quot;: {&quot;coordinates&quot;: [-73.76916374290133, 40.86293094783606], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;7&quot;, &quot;properties&quot;: {&quot;value1&quot;: 1301851, &quot;value2&quot;: 794349}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [-73.6992424479807, 40.91516633268921, -73.6992424479807, 40.91516633268921], &quot;geometry&quot;: {&quot;coordinates&quot;: [-73.6992424479807, 40.91516633268921], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;8&quot;, &quot;properties&quot;: {&quot;value1&quot;: 1340216, &quot;value2&quot;: 794534}, &quot;type&quot;: &quot;Feature&quot;}], &quot;type&quot;: &quot;FeatureCollection&quot;});\n",
        "\n",
        "        \n",
        "    \n",
-       "    geo_json_b49a9e94a6886574458ba66067620923.bindTooltip(\n",
+       "    geo_json_5a3a56bf19e6c8414025416c8463870b.bindTooltip(\n",
        "    function(layer){\n",
        "    let div = L.DomUtil.create(&#x27;div&#x27;);\n",
        "    \n",
@@ -263,10 +287,10 @@
        "&lt;/script&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x1bcf5736880>"
+       "<folium.folium.Map at 0x1bc85a15a90>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
